add feature toggles

--- a/kubernetes/db-deployment.yaml
+++ b/kubernetes/db-deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app-deployment
+  name: db-deployment
   namespace: dhagans
   labels:
-    app: app
+    app: db
 spec:
   replicas: 1
   strategy:
@@ -12,19 +12,17 @@ spec:
   minReadySeconds: 20
   selector:
     matchLabels:
-      app: app
+      app: db
   template:
     metadata:
       labels:
-        app: app
+        app: db
     spec:
       containers:
       - envFrom:
-        - configMapRef:
-            name: feature-toggle
         - secretRef:
             name: db-secret
-        name: app-deployment
+        name: db-deployment
         image: docker pull harbor.dev.afsmtddso.com/dhagans-harbor-project/lab-env-repo@sha256:4d178c15d825d19cb86d3c5cd4d8de2d59ef58f5def50f4cc6ec9700eddcf35c
         ports:
-        - containerPort: 5000
+        - containerPort: 5432
